# vecl-tts

./: .coverage  .coverage.MacBook-Pro-de-Daniel.local.48927.XmLHYcGx  .env.example  .gitignore  README.md  REFACTORING_CHECKPOINT.md  REFACTORING_PLAN.md  debug_embeddings.py  pyproject.toml  test_language_fix.py
configs/: config.yaml  local_test.yaml  main.yaml
configs/audio/: default.yaml
configs/download/: default.yaml
configs/experiment/: vecl_train.yaml  yourtts_finetune.yaml
configs/model/: vecl.yaml  yourtts.yaml
configs/paths/: default.yaml  local.yaml
configs/s3/: default.yaml
configs/training/: default.yaml
configs/wandb/: default.yaml
docs/: vecl_debug_journey.md
legacy/: data.py  infer_vecl.py  preprocess_audio.py  preprocess_text.py
legacy/vecl/: dataset.py  loss.py  train_vecl.py  vecl.py
legacy/yourtts/: config_loader.py  infer.py  train_yourtts_custom.py  vits_custom.py
scripts/: 02_train_model.py  download.py  train_model.py
tests/: conftest.py  test_config.py
tests/dataset/: test_dataset_preparation.py
tests/embeddings/: test_emotion.py  test_speaker.py
tests/fixtures/: data.py
tests/integration/: test_speaker_integration.py
tests/model/: test_checkpoint.py
tests/scripts/: test_train_step.py
vecl/: config.py  data_utils.py  infer_vecl.py  train_vecl_tts.py
vecl/data/: downloader.py  preparation.py  storage.py  vecl_dataset.py
vecl/dataset/: __init__.py  preparation.py  preprocess_audio.py  vecl_dataset.py
vecl/embeddings/: __init__.py  emotion.py  speaker.py
vecl/evaluation/: __init__.py  metrics.py  plot_melspec_pitch.py
vecl/model/: __init__.py  checkpoint.py  config.py  layers.py  loader.py  loss.py  vecl.py
vecl/model/strategy/: base.py  factory.py  vecl_strategy.py  yourtts_strategy.py
vecl/models/: config.py  layers.py  loader.py  loss.py  vecl.py  yourtts.py
vecl/preprocessing/: __init__.py  audio.py  text.py
vecl/training/: trainer.py  utils.py
vecl/utils/: downloader.py
vecl/vecl/: config.py  dataset.py  emotion_embedding.py  train_vecl.py  vecl.py
vecl/yourtts/: config_loader_old.py  config_loader_old_old.py  dataset.py  debug_checkpoints.py  infer.py  recipe.py  s3_trainer.py  train_yourtts_custom.py  train_yourtts_custom_old.py
