[project]
name = "vecl-pt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.5.0",
    "boto3>=1.38.32",
    "coqui-tts>=0.24.3",
    "ffmpeg-normalize>=1.32.3",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "silero-vad>=5.1.2",
    "tqdm>=4.66.4",
    "vl-convert-python>=1.8.0",
    "wandb>=0.20.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['notebooks']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT', 'PD']
ignore = ['E501']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
format = 'ruff check . --fix && ruff format .'
